<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:fitsSystemWindows="true"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rob"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rob"
        android:text="@string/date"

        app:layout_constraintEnd_toEndOf="@+id/city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/border"
        android:fontFamily="@font/rob"
        android:text="@string/degrees"
        android:textSize="@dimen/text_size_for_degree"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/rob"
        android:text="@string/degrees_for_day"
        android:textSize="@dimen/text_size_for_days_degre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/temp" />

    <View
        android:id="@+id/view"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_below="@+id/day"
        android:layout_alignStart="@id/day"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/day"
        app:layout_constraintStart_toStartOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <TextView
        android:id="@+id/night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/day"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/rob"
        android:text="@string/degrees_for_night"
        android:textSize="@dimen/text_size_for_days_degre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/rob"
        android:text="@string/speed_wind"
        android:textSize="@dimen/text_for_switch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/wetness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/rob"
        android:text="@string/wetness"
        android:textSize="@dimen/text_for_switch"
        app:layout_constraintBottom_toTopOf="@+id/wind_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>